# rust-psvita

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs
cargo-psvita/: .gitignore  Cargo.toml  build.rs
cargo-psvita/src/: main.rs
cargo-psvita/tests/: build_examples.rs
examples/: Cargo.toml
examples/dylib/: Cargo.toml
examples/dynamic_linking/: Cargo.toml
examples/minimal/: Cargo.toml
psvita-linker/: Cargo.toml
psvita-linker/compat-args/: Cargo.toml
psvita-linker/compat-args/src/: flag.rs
psvita-linker/ld-compat-args/: Cargo.toml
psvita-linker/ld-compat-args/src/: lib.rs
psvita-linker/ld-compat-opts/: Cargo.toml
psvita-linker/ld-compat-opts/compat-args/src/: lib.rs  long.rs  short.rs
psvita-linker/ld-compat-opts/src/: common.rs  lib.rs
psvita-linker/ld-compat-opts/src/common/: flag.rs  long.rs  short.rs
psvita-linker/ld-version-script/: Cargo.toml
psvita-linker/ld-version-script/src/: glob_pattern.rs  glob_set.rs  lib.rs
psvita-linker/ld-version-script/src/glob_set/: helpers.rs
psvita-linker/ld-version-script/tests/: matching.rs  parsing.rs
psvita-linker/sce-psvita/: Cargo.toml
psvita-linker/sce-psvita/src/: lib.rs
psvita-linker/sce-psvita/tests/: tests.rs
psvita-linker/src/: input.rs  lib.rs  main.rs
psvita-linker/src/codegen/: mod.rs  verification.rs
psvita-sce-types/: Cargo.toml
psvita-sce-types/src/: export.rs  helpers.rs  import.rs  lib.rs  library.rs  module.rs  module_exports.rs  module_imports.rs  module_info.rs  nid.rs
psvita_sce_types/: Cargo.toml
src/: main.rs
(+14 files in other folders)
