[package]
name = "psvita-linker"
version = "0.1.0"
edition = "2018"

[dependencies]
ld-compat-args = { path = "ld-compat-args" }
ld-version-script = { path = "ld-version-script" }
once_cell = "1.8.0"
pretty_env_logger = "0.4.0"
log = "0.4.14"

[dependencies.object]
version = "0.26.0"
default-features = false
features = ["read", "write"]
