[package]
name = "psvita-linker"
version = "0.1.0"
edition = "2018"

[dependencies]
ld-compat-args = { path = "ld-compat-args" }
ld-version-script = { path = "ld-version-script" }
once_cell = "1.8.0"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"

[dependencies.object]
version = "0.26.0"
default-features = false
features = ["read", "write"]

[features]
